refactor: some java 21+ syntax refactor